--- a/Assignment1/nbproject/private/private.properties
+++ b/Assignment1/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\ThanhNguyen\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\UNu\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
